--- a/app.component.html
+++ b/app.component.html
@@ -2,9 +2,10 @@
 
 
   <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
-    <input type="text" formControlName="qty" class="form-control mr-15">
-    <button type="button" (click)="addQuantity()" class="btn btn-primary">+</button>
-
+    <div class="display-flex">
+      <input type="text" formControlName="qty" class="form-control mr-15">
+      <button type="button" (click)="addQuantity()" class="btn btn-primary">+</button>
+    </div>
     <div *ngFor="let quantity of quantities().controls; let i=index" [formGroupName]="i" class="display-flex">
       <input type="text" formControlName="qty" class="form-control mr-15">
       <button type="button" (click)="addQuantity()" class="btn btn-primary mr-15">+</button>
